--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.6.0",
+    "highlightjs": "^9.16.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
